--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       <p class="sub-heading">Choose your mess to continue</p>
 
       <div class="mess-options">
-        <a href="{{ url_for('choose_login', mess='Indya') }}">
+        <a href="{{ url_for('choose_login', mess='Quess') }}">
           <img src="{{ url_for('static', filename='images/quess_icon.png') }}" alt="Indya Mess" class="mess-logo">
         </a>
         <a href="{{ url_for('choose_login', mess='BlueDove') }}">
