feat: add aspect-wise complaint percentages and students-say summary (v2)

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -39,7 +39,11 @@
         <a href="{{ url_for('admin_menus') }}" class="btn">Back to Admin Menu</a>
         <a href="{{ url_for('admin_export') }}" class="btn">Export Ratings</a>
         <a href="{{ url_for('weekly_report') }}" class="btn">Weekly Report</a>
+        <a href="{{ url_for('admin_aspect_summary') }}" class="btn">
+          📊 Aspect-wise Complaints
+        </a>
       </div>
+
     </div>
   </div>
 
