--- a/static/css/style.css
+++ b/static/css/style.css
@@ -401,3 +401,30 @@ tbody tr:nth-child(even) {
   transform: translateY(-3px);
   box-shadow: 0 0 25px rgba(162, 210, 255, 0.6);
 }
+
+/* Sentiment Bars */
+.sentiment-container {
+  width: 100%;
+  height: 14px;
+  border-radius: 8px;
+  overflow: hidden;
+  background: #ddd;
+}
+
+.neg-bar {
+  height: 100%;
+  background: #e74c3c;
+  float: left;
+}
+
+.neu-bar {
+  height: 100%;
+  background: #f1c40f;
+  float: left;
+}
+
+.pos-bar {
+  height: 100%;
+  background: #2ecc71;
+  float: left;
+}
