--- a/templates/suggestions_view.html
+++ b/templates/suggestions_view.html
@@ -16,7 +16,8 @@
 
 
 <body class="login-page">
-  {% include '_navbar.html' %}
+  {% include '_header.html' %}
+
   <div class="overlay">
     <div class="choose-card" style="width: 850px;">
       <h1 class="main-heading">💬 Student Suggestions</h1>
@@ -55,5 +56,6 @@
       </div>
     </div>
   </div>
+{% include '_footer.html' %}
 </body>
 </html>
