--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Thank You | Mess Vote</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <style>
 
-    /* Background */
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+  <style>
     body {
       margin: 0;
       padding: 0;
@@ -88,14 +88,30 @@
     }
   </style>
 </head>
+
 <body>
+  {% include '_header.html' %}
   <div class="overlay">
     <div class="thankyou-card">
+
       <h1>Thank You!</h1>
-      <p>Your feedback helps us make the mess food better every day!</p>
-      <a href="{{ url_for('choose_meal') }}" class="btn">Give Another Feedback</a><br>
-      <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
+
+      <p>
+        Your feedback helps us make the mess food better every day!
+      </p>
+
+      <a href="{{ url_for('choose_meal') }}" class="btn">
+        Give Another Feedback
+      </a>
+
+      <br>
+
+      <a href="{{ url_for('logout') }}" class="logout-btn">
+        Logout
+      </a>
+
     </div>
   </div>
+  {% include '_footer.html' %}
 </body>
 </html>
